Fixed layout issues with older browsers

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -18,8 +18,13 @@ nav{
     height:65vh;
 }
 .homeHeader{
-    margin:0;
-    padding:0;
+    padding:50px 0 0 0;
+}
+.homeHeader div{
+  height:100%;
+}
+.headerImgContainer{
+  height:100%;
 }
 .mainSection{
     height:30vh;
@@ -44,7 +49,7 @@ nav{
 }
 .headerImg{
     display:flex;
-    justify-content:center;
+    justify-content:space-around;
     align-items:center;
     flex-direction:column;
     background-color:#FB5B21;
@@ -56,16 +61,15 @@ nav{
     width:424px;
     height:336px;
 }
-.headerDescription{
-    width:100%;
-    height:100%;
+.headerDescriptionContainer{
     background-color:#F5F5F5;
     display:flex;
     justify-content:center;
     align-items:center;
-    padding:20% 15% 15% 15%;
 }
-
+.headerDescription{
+  height:100%;
+}
 .headerDescription ul{
     list-style-type:none;
 }
@@ -82,7 +86,6 @@ nav{
     font-family:Roboto;
     margin-top:5%;
 }
-
 .ourBrand{
     position:absolute;
     font-size:40px;
@@ -95,7 +98,6 @@ nav{
     font-size:40px;
     color:white;
 }
-
 .footerSection{
     height:300px;
     border:1px solid green;
